--- a/ticketsystem/style.css
+++ b/ticketsystem/style.css
@@ -21,15 +21,16 @@ body{
 #myfooter{
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    background-color:white;
+    background-color: white;
     border-style: solid;
     border-color: white;
     border-top-color: rgb(230, 255, 250);
     height: 100px;
-    margin-top: 350px;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-bottom: -10px;
+    width: 960px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
     font-size: 20px;
     padding-left: 20px;
     padding-bottom: 60px;
