--- a/ticketsystem/style.css
+++ b/ticketsystem/style.css
@@ -8,12 +8,13 @@ body{
     border-style: solid;
     border-color: white;
     border-bottom-color: rgb(237, 255, 250);
-    height: 100px;
-    margin-top: -60px;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-bottom: -10px;
+    height: 50px;
     font-size: 50px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
     padding-left: 20px;
     padding-bottom: 25px;
 }
@@ -26,7 +27,7 @@ body{
     border-color: white;
     border-top-color: rgb(230, 255, 250);
     height: 100px;
-    width: 960px;
+    width: 100%;
     position: absolute;
     bottom: 0;
     right: 0;
