--- a/profile.css
+++ b/profile.css
@@ -44,6 +44,7 @@ body{
     font-size: 20px;
     padding-left: 20px;
     padding-bottom: 60px;
+    margin-bottom: -1000px;
 }
 
 #footerParagraphs{
