--- a/profile.css
+++ b/profile.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(253, 219, 219);
+    background-color: rgb(247, 244, 244);
 }
 
 #selfie{
@@ -35,31 +35,41 @@ nav{
     z-index: 0;
     top: 220px;
     left: 0px;
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(255, 238, 0);
     height: 100px;
     width: 100%;
 }
 
-nav button {
+nav a {
     position: relative;
-    left: 20px;
-    top: 15px;
-    background-color: rgb(255, 101, 101);
+    left: 10px;
+    top: 10px;
     font-family: 'Archivo Black';
-    border-radius: 40px;
-    border: solid;
-    border-width: 7px;
-    border-color: rgb(255, 97, 97);
-    border-top-color: rgb(250, 131, 131);
-    border-right-color: rgb(240, 106, 106);
-    color: black;
-    width: 220px;
-    height: 60px;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     display: inline-block;
     font-size: 40px;
-    padding-bottom: 50px;
-    margin-right: 30px;
+    margin-right: 20px;
+}
+
+footer{
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    border-top-style: solid;
+    border-width: 10px;
+    border-color: rgb(255, 238, 0);
+    padding-top: 0px;
+    height: 80px;
+    width: 100%;
+    line-height: 10px;
+}
+
+#welcome{
+    font-size: 40px;
 }
 
 @media screen and (max-width: 500px){
@@ -74,16 +84,30 @@ nav button {
         left: 20px;
         top: 40px;
     }
-    nav button{
-        width: 30%;
-        font-size: 19;
-        padding-bottom: 0;
+    nav{
+        height: 45px;
+    }
+    nav a{
+        font-size: 18;
+        margin-right: 17px;
+    }
+    #pageinfo{
+        position: absolute;
+        top: 260px;
+    }
+    #welcome{
+        font-size: 20px;
     }
 }
 
 a:link {
     text-decoration: none;
-  }
+}
+
+#link{
+    color: blue;
+    text-decoration: underline;
+}
   
 a:visited {
     text-decoration: none;
