--- a/profileCSS/profileIPHONE.css
+++ b/profileCSS/profileIPHONE.css
@@ -2,7 +2,7 @@
     body{
         position: relative;
         margin: 0;
-        background-color:black;
+        background-color: #0A0A0A;
         height: 1000px;
         width: 100%;
         padding: 0px;
@@ -12,7 +12,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background-color:white;
+        background-color:rgb(250, 250, 250);
         height: 180px;
         width: 100%;
     }
@@ -56,11 +56,12 @@
     }
     nav{
         position: absolute;
+        font-family: 'Oswald', sans-serif;
         border-bottom-style: solid;
         z-index: 0;
         top: 180px;
         left: 0px;
-        background-color: yellow;
+        background-color: rgb(153, 34, 70);
         height: 55px;
         width: 100%;
         padding: 0;
@@ -76,17 +77,19 @@
         text-align: center;
         border-style: solid;
         border-bottom-style: dotted;
-        border-color: white;
-        font-family: 'Archivo Black';
+        border-top-style: dotted;
+        border-color: black;
+        border-top-color: rgb(250, 250, 250);
         width: 24.3%;
-        height: 40px;
+        height: 43px;
         border-width: 2px;
-        padding-top: 12px;
+        border-top-width: 1px;
+        border-bottom-width: 2px;
+        padding-top: 10px;
         float: left;
     }
     a{
         color: rgb(0, 0, 0);
-        font-size: 18px;
     }
     #pageinfo{
         position: relative;
@@ -107,7 +110,7 @@
         background-color: rgb(255, 255, 255);
         border-top-style: solid;
         border-width: 10px;
-        border-color: rgb(255, 238, 0);
+        border-color: rgb(153, 34, 70);
         padding-top: 0px;
         height: 80px;
         width: 100%;
