--- a/profileCSS/profileIPHONE.css
+++ b/profileCSS/profileIPHONE.css
@@ -1,119 +1,35 @@
 @media screen and (max-width: 450px){
     body{
-        position: relative;
-        margin: 0;
-        background-color: #0A0A0A;
-        height: 1000px;
+        left: 0%;
         width: 100%;
-        padding: 0px;
+        height: 1080px;
     }
     header{
         position: relative;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color:rgb(250, 250, 250);
         height: 180px;
         width: 100%;
-    }
-    #mynamebox h1{
-        margin: 0;
-        position: absolute;
-        top: 0;
-        color:rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255);
     }
     #mynamebox{
         position: absolute;
         top: 48px;
-        right: 0px;
         font-size: 25px;
-        float: right;
         width: 61%;
-        height: 120px;
-        padding: 0;
-        border-style: none;
     }
     #mynamebox h1{
-        margin: 0;
-        position: absolute;
-        top: 0;
+        color:black;
     }
-    #selfiebox{
-        position: absolute;
-        top: 40px;
-        left: 8px;
-        text-align: center;
-        width: 30%;
-        padding: 0;
-        border-radius: 100%;
-        border-width: 3px;
-    }
-    img{
-        width: 100%;
-    }
-    #welcome{
-        font-size: 40px;
-    }
-    nav{
-        position: absolute;
+    
+    button{
         font-family: 'Oswald', sans-serif;
-        border-bottom-style: solid;
-        z-index: 0;
-        top: 180px;
-        left: 0px;
-        background-color: rgb(153, 34, 70);
-        height: 55px;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    ul {
-        list-style-type: none;
-        margin-top: 0px;
-        padding: 0;
-        overflow: hidden;
-      }    
-    li {
-        text-align: center;
-        border-style: solid;
-        border-bottom-style: dotted;
-        border-top-style: dotted;
-        border-color: black;
-        border-top-color: rgb(250, 250, 250);
-        width: 24.3%;
-        height: 43px;
-        border-width: 2px;
-        border-top-width: 1px;
-        border-bottom-width: 2px;
-        padding-top: 10px;
-        float: left;
-    }
-    a{
-        color: rgb(0, 0, 0);
-    }
-    #pageinfo{
-        position: relative;
-        top: 70px;
-        left: 20px;
-        width: 90%;
+        font-size: 23px;
     }
     #welcome{
         font-size: 20px;
         color: white;
     }
     footer{
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
-        position: absolute;
-        bottom: 0;
-        left: 0;
         background-color: rgb(255, 255, 255);
-        border-top-style: solid;
-        border-width: 10px;
-        border-color: rgb(153, 34, 70);
-        padding-top: 0px;
-        height: 80px;
-        width: 100%;
-        line-height: 10px;
+        color: black;
     }
 }
