--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -84,6 +84,7 @@ li {
 }
 button{
     font-family: 'Oswald', sans-serif;
+    text-align: center;
     font-size: 25px;
     width: 100%;
     height: 100%;
@@ -105,13 +106,14 @@ a{
 }
 footer{
     color: white;
-    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
     text-align: center;
     position: absolute;
     bottom: 0;
     left: 0;
     background-color: #0A0A0A;
     border-top-style: solid;
+    border-bottom-style: solid;
     border-width: 10px;
     border-color: rgb(255, 0, 76);
     padding-top: 0px;
@@ -147,5 +149,5 @@ a:visited {
 }
 
 button:hover{
-    background-color: white;
+    background-color: rgb(219, 38, 92);
 }
