--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -101,12 +101,12 @@ footer{
     font-size: 20px;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: 1%;
     left: 0;
     background-color: #0A0A0A;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-width: 10px;
+    border-top-style: dashed;
+    border-bottom-style: dashed;
+    border-width: 5px;
     border-color: rgb(255, 0, 76);
     padding-top: 0px;
     height: 80px;
