--- a/profileCSS/profileIPHONE.css
+++ b/profileCSS/profileIPHONE.css
@@ -34,7 +34,12 @@
         color: white;
     }
     footer{
+        border-top-style: solid;
+        border-bottom-style: solid;
+        border-color: rgb(255, 0, 76);
+        border-width: 10px;
         background-color: rgb(255, 255, 255);
         color: black;
+        bottom: 0;
     }
 }
