--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -3,7 +3,7 @@ body{
     position: relative;
     margin: 0;
     background-color: #0A0A0A;
-    height: 100%;
+    height: 1080px;
     width: 700px;
     padding: 0px;
 }
