--- a/profileCSS/profileIPHONE.css
+++ b/profileCSS/profileIPHONE.css
@@ -2,12 +2,12 @@
     body{
         left: 0%;
         width: 100%;
+        height: 800px;
     }
     header{
         position: relative;
         height: 180px;
         width: 100%;
-        background-color: rgb(255, 255, 255);
     }
     #mynamebox{
         position: absolute;
@@ -16,29 +16,20 @@
         width: 61%;
     }
     #mynamebox h1{
-        color:black;
+        color:white;
     }
     nav{
         border-bottom-style: dotted;
         border-width: 1px;
-        background-color: white;
+        background-color: #0A0A0A;
     }
     button{
-        border-color: white;
+        border-color: #0A0A0A;
         font-family: 'Oswald', sans-serif;
         font-size: 18px;
     }
     #welcome{
         font-size: 20px;
         color: white;
-    }
-    footer{
-        border-top-style: solid;
-        border-bottom-style: solid;
-        border-color: rgb(255, 0, 76);
-        border-width: 10px;
-        background-color: rgb(255, 255, 255);
-        color: black;
-        bottom: 0;
     }
 }
