--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -1,8 +1,9 @@
 body{
-    max-width: 900px;
+    max-width: 800;
     margin: auto;
     background: #0A0A0A;
     position: relative;
+    height: 1200px;
 }
 #longbody{
     height: 1500px;
@@ -17,8 +18,8 @@ header{
     float: right;
     position: absolute;
     top: 70px;
-    left: 140px;
-    font-size: 45px;
+    left: 160px;
+    font-size: 40px;
     width: 80%;
 }
 #mynamebox h1{
@@ -142,7 +143,7 @@ button:hover{
     }
 }
 
-@media screen and (max-width: 670px){
+@media screen and (max-width: 720px){
     #mynamebox{
         top: 15px;
     }
