--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -4,6 +4,7 @@ body{
     background: #0A0A0A;
     position: relative;
     height: 1200px;
+    font-family: Ubuntu;
 }
 #longbody{
     height: 1500px;
@@ -19,7 +20,7 @@ header{
     position: absolute;
     top: 70px;
     left: 140px;
-    font-size: 40px;
+    font-size: 35px;
     width: 80%;
 }
 #mynamebox h1{
@@ -43,7 +44,6 @@ img{
 }
 nav{
     position: absolute;
-    font-family: 'Oswald', sans-serif;
     z-index: 0;
     top: 190px;
     height: 55px;
@@ -66,7 +66,6 @@ li {
     float: left;
 }
 button{
-    font-family: 'Oswald', sans-serif;
     text-align: center;
     font-size: 25px;
     width: 100%;
@@ -75,6 +74,7 @@ button{
     border-color: #0A0A0A;
     border-left-width: 5px;
     border-right-width: 5px;
+    font-weight: 700;
 }
 a{
     color: rgb(0, 0, 0);
@@ -88,10 +88,11 @@ a{
 #welcome{
     font-size: 30px;
     color: white;
+
 }
 footer{
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     position: absolute;
     bottom: 1%;
@@ -99,12 +100,12 @@ footer{
     background-color: #0A0A0A;
     border-top-style: groove;
     border-bottom-style: groove;
-    border-width: 5px;
+    border-width: 3px;
     border-color: rgb(255, 0, 76);
     padding-top: 0px;
-    height: 80px;
+    height: 100px;
     width: 100%;
-    line-height: 10px;
+    line-height: 15px;
 }
 
 a:link {
@@ -144,8 +145,37 @@ button:hover{
     }
 }
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 760px){
     #mynamebox{
         top: 15px;
+    }
+}
+
+@media screen and (max-width: 420px){
+    body{
+        height: 1000px;
+    }
+    #mynamebox{
+        top: 48px;
+        font-size: 25px;
+        width: 61%;
+    }
+    nav{
+        left: 1%;
+        width: 98%;
+    }
+    button{
+        font-size: 18px;
+        border-width: 2px;
+    }
+    #welcome{
+        font-size: 20px;
+    }
+    footer{
+        font-size: 20px;
+        line-height: 17px;
+        border-width: 2px;
+        width: 98%;
+        left: 1%;
     }
 }
