--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -66,7 +66,8 @@ li {
     float: left;
 }
 button{
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 25px;
     width: 100%;
     height: 100%;
