--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -66,8 +66,7 @@ li {
     float: left;
 }
 button{
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0px;
     font-size: 25px;
     width: 100%;
     height: 100%;
