--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -96,18 +96,18 @@ section p{
 }
 footer{
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     position: absolute;
     bottom: 1%;
     left: 0;
     background-color: #0A0A0A;
-    border-top-style: groove;
-    border-bottom-style: groove;
+    border-top-style: dashed;
+    border-bottom-style: dashed;
     border-width: 3px;
     border-color: rgb(255, 0, 76);
     padding-top: 0px;
-    height: 100px;
+    height: 90px;
     width: 100%;
     line-height: 15px;
 }
