--- a/crypto/cryptostyle.css
+++ b/crypto/cryptostyle.css
@@ -1,8 +1,8 @@
 :root {
     --backing: hsl(0, 5%, 12%);
-    --buttonoff: hsl(41, 94%, 50%);
-    --buttonon: hsl(41, 93%, 35%);
-    --links: hsl(12, 87%, 63%);
+    --buttonoff: hsl(41, 93%, 57%);
+    --buttonon: hsl(34, 72%, 47%);
+    --links: hsl(300, 100%, 60%);
     --sublinks: hsl(39, 100%, 60%);
   }
 
@@ -20,25 +20,27 @@ body{
 header{
     position: relative;
     background-color: var(--backing);
-    height: 130px;
+    height: 180px;
     width: 100%;
 }
 #mynamebox{
     float: right;
-    left: 140px;
-    font-size: 40px;
+    position: absolute;
+    top: 70px;
+    left: 10px;
+    font-size: 38px;
     width: 80%;
 }
 #mynamebox h1{
     color: white;
-    margin-top: 25px;
-    margin-left: 20;
+    margin-top: 0;
+    margin-left: 0;
     position: absolute;
     top: 0;
 }
 #selfiebox{
     position: absolute;
-    top: 15px;
+    top: 40px;
     left: 8px;
     text-align: center;
     width: 120px;
@@ -50,10 +52,9 @@ img{
     width: 100%;
 }
 nav{
-    background-color: var(--backing);
     position: absolute;
     z-index: 0;
-    top: 150px;
+    top: 190px;
     height: 55px;
     width: 100%;
     padding: 0;
@@ -72,15 +73,14 @@ nav ul li {
     width: 25%;
     height: 100%;
     float: left;
-}  
-
+}
 button{
     padding: 0px;
     font-size: 25px;
     width: 100%;
     height: 100%;
     background-color: var(--buttonoff);
-    border-color: var(--heading);
+    border-color: var(--backing);
     border-left-width: 5px;
     border-right-width: 5px;
     font-weight: 700;
@@ -90,18 +90,18 @@ a{
 }
 #pageinfo{
     position: relative;
-    top: 70px;
+    top: 0px;
     left: 20px;
     width: 90%;
 }
 section{
     font-size: 22px;
     color: white;
-    margin-top: 25px;
+    margin-top: 0px;
 }
 section p{
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 footer{
     color: white;
@@ -161,15 +161,15 @@ button:hover{
 
 @media screen and (max-width: 420px){
     body{
-        height: 1200px;
+        height: 1000px;
     }
     #mynamebox{
         top: 40px;
-        font-size: 25px;
+        font-size: 27px;
         width: 61%;
     }
     #mynamebox h1{
-        margin-left: 0;
+        margin-left: 10;
     }
     nav{
         left: 1%;
