--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -80,7 +80,7 @@ button{
     width: 100%;
     height: 100%;
     background-color: var(--buttonoff);
-    border-color: var(--heading);
+    border-color: var(--backing);
     border-left-width: 5px;
     border-right-width: 5px;
     font-weight: 700;
