--- a/profileCSS/profile.css
+++ b/profileCSS/profile.css
@@ -1,9 +1,11 @@
 :root {
-    --backing: hsl(0, 5%, 12%);
-    --buttonoff: hsl(41, 94%, 50%);
-    --buttonon: hsl(41, 93%, 35%);
-    --links: hsl(12, 87%, 63%);
-    --sublinks: hsl(39, 100%, 60%);
+    --heading: hsl(37, 100%, 63%);
+    --backing: rgb(247,247,247);
+    --buttonoff: hsl(39, 100%, 73%);
+    --buttonon: hsl(41, 43%, 51%);
+    --posttitle: hsl(273, 100%, 48%);
+    --sublinks: hsl(29, 100%, 50%);
+    --textcolor: hsl(0, 0%, 19%);
   }
 
 body{
@@ -14,13 +16,10 @@ body{
     height: 1200px;
     font-family: Ubuntu;
 }
-#longbody{
-    height: 1500px;
-}
 header{
     position: relative;
-    background-color: var(--backing);
-    height: 130px;
+    background-color: var(--heading);
+    height: 202px;
     width: 100%;
 }
 #mynamebox{
@@ -31,8 +30,8 @@ header{
 }
 #mynamebox h1{
     color: white;
-    margin-top: 25px;
-    margin-left: 20;
+    margin-top: 45px;
+    margin-left: 10;
     position: absolute;
     top: 0;
 }
@@ -74,37 +73,48 @@ nav ul li {
     float: left;
 }  
 
+ul{
+    padding-left: 20px;
+    list-style-type: square;
+}
+
 button{
     padding: 0px;
     font-size: 25px;
     width: 100%;
     height: 100%;
     background-color: var(--buttonoff);
-    border-color: var(--backing);
+    border-color: var(--heading);
     border-left-width: 5px;
     border-right-width: 5px;
     font-weight: 700;
-}
-a{
-    color: rgb(0, 0, 0);
+    color: var(--textcolor);
 }
 #pageinfo{
     position: relative;
-    top: 70px;
+    top: 0px;
     left: 20px;
     width: 90%;
 }
 section{
     font-size: 22px;
-    color: white;
+    color: var(--textcolor);
     margin-top: 25px;
+    border-style: solid;
+    border-color: rgb(236, 236, 236);;
+    border-radius: 10px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 section p{
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 footer{
-    color: white;
+    color: var(--textcolor);
     font-size: 20px;
     text-align: center;
     position: absolute;
@@ -114,7 +124,7 @@ footer{
     border-top-style: dashed;
     border-bottom-style: dashed;
     border-width: 3px;
-    border-color: var(--buttonoff);
+    border-color: var(--buttonon);
     padding-top: 0px;
     height: 90px;
     width: 100%;
@@ -125,13 +135,15 @@ a:link {
     text-decoration: none;
 }
 
-#link{
-    color: var(--links);
-    text-decoration: underline
+#posttitle{
+    color: var(--posttitle);
+    text-decoration: none;
+    font-size: 30px;
 }
 
 #slink{
     color: var(--sublinks);
+    text-decoration: underline;
 }
 
 #navoffset{
@@ -147,29 +159,38 @@ button:hover{
 }
 
 @media screen and (max-width: 860px){
-    #mynamebox{
-        top: 79px;
-        font-size: 35px;
+    #mynamebox h1{
+        margin-top: 45px;
+        margin-left: 0;
     }
 }
 
-@media screen and (max-width: 760px){
+@media screen and (max-width: 720px){
     #mynamebox{
-        top: 15px;
+        float: right;
+        padding: 0px;
+        height: 120px;
+        margin-top: 0px;
+        font-size: 200%;
+        width: 70%;
+        margin-left: 0;
+    }
+    #mynamebox h1{
+        position: relative;
+        float: left;
+        margin-top: 0px;
+        margin-left: 0;
     }
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 455px){
     body{
         height: 1200px;
     }
     #mynamebox{
-        top: 40px;
-        font-size: 25px;
-        width: 61%;
-    }
-    #mynamebox h1{
-        margin-left: 0;
+        margin-top: 20px;
+        width: 63%;
+        font-size: 26px;
     }
     nav{
         left: 1%;
