--- a/profile.css
+++ b/profile.css
@@ -19,7 +19,7 @@ body{
 header{
     position: relative;
     background-color: var(--heading);
-    height: 202px;
+    height: 193px;
     width: 100%;
 }
 #mynamebox{
@@ -37,28 +37,25 @@ header{
 }
 #selfiebox{
     position: absolute;
-    top: 15px;
-    left: 8px;
+    top: 20px;
+    left: 25px;
     text-align: center;
-    width: 120px;
+    width: 100px;
     padding: 0;
-    border-radius: 100%;
-    border-width: 3px;
+    border-width: 5px;
+    border-color: rgb(255, 255, 255);
+    border-style: dotted;
+    border-radius: 200px;
 }
 img{
     width: 100%;
 }
 nav{
-    background-color: var(--backing);
+    background-color: var(--heading);
     position: absolute;
-    z-index: 0;
-    top: 150px;
-    height: 55px;
+    top: 143px;
+    height: 50px;
     width: 100%;
-    padding: 0;
-    margin: 0;
-    border-top-width: 1px;
-    border-bottom-width: 2px;
 }
 nav ul {
     list-style-type: none;
@@ -85,8 +82,9 @@ button{
     height: 100%;
     background-color: var(--buttonoff);
     border-color: var(--heading);
-    border-left-width: 5px;
-    border-right-width: 5px;
+    border-left-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
     font-weight: 700;
     color: var(--textcolor);
 }
@@ -187,13 +185,20 @@ button:hover{
     body{
         height: 1200px;
     }
+    #selfiebox{
+        top: 20px;
+        left: 14px;
+    }
+    img{
+        width: 100%;
+    }
     #mynamebox{
         margin-top: 20px;
-        width: 63%;
+        width: 64%;
         font-size: 26px;
     }
     nav{
-        left: 1%;
+        left: 0.75%;
         width: 98%;
     }
     button{
