--- a/profile.css
+++ b/profile.css
@@ -42,9 +42,9 @@ header{
     text-align: center;
     width: 100px;
     padding: 0;
-    border-width: 5px;
+    border-width: 3px;
     border-color: rgb(255, 255, 255);
-    border-style: dotted;
+    border-style: solid;
     border-radius: 200px;
 }
 img{
