--- a/style.css
+++ b/style.css
@@ -152,6 +152,23 @@ main{
     color:#ab00c2;
 }
 
+.name-banner{
+    padding-top: .5rem;
+    position: fixed;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    background-color: white;
+    box-shadow: 1.5px 2px rgba(0, 0, 0, 0.062), -3px 0 .4em rgba(0, 0, 0, 0.062);
+}
+
+.name-banner > h1{
+    margin: auto;
+    color: var(--text-secondary);
+}
+
 /* Small screens */
 @media only screen and (max-width: 600px) {
     .nav-link svg{
@@ -163,13 +180,14 @@ main{
         filter: grayscale(0%) opacity(1);
         border-top: #ab00c2;
         border-width: 0px;
-        border-top-width: 5px;
+        border-top-width: 3.5px;
         border-style: solid;
     }
 
     .topbar{
         top: auto;
         bottom: 0;
+        height: 3.8rem;
     }
 
     .topbar-container{
@@ -184,7 +202,22 @@ main{
     }
 
     main{
-        margin-top: 1rem;
+        margin-top: 3rem;
+    }
+
+    .name-banner{
+        padding-top: .5rem;
+        position: fixed;
+        bottom: auto;
+        top: 0;
+        margin: auto;
+        width: 100%;
+        height: 2.8rem;
+    }
+    
+    .name-banner > h1{
+        margin: auto;
+        color: var(--text-secondary);
     }
 
   }
