--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main{
     min-width: 375px;
     max-height: 5rem;
     box-shadow: 1.5px 2px rgba(0, 0, 0, 0.062), -3px 0 .4em rgba(0, 0, 0, 0.062);
+    z-index: 99999;
 }
 
 .topbar-container{
@@ -63,12 +64,29 @@ main{
 }
 
 .post{
+    position: relative;
     width: 80%;
     margin: 1rem;
     padding: 1rem;
     background-color: var(--bg-secondary);
     border-radius: .6rem;
     box-shadow: 1.5px 2px rgba(0, 0, 0, 0.062), -3px 0 .4em rgba(0, 0, 0, 0.062);
+}
+
+.post-image{
+    float: right;
+    width: 8rem;
+    max-height: 8rem;
+    margin-right: 1rem;
+}
+
+.post-image-small{
+    position: absolute;
+    top: 1.2rem;
+    right: 1rem;
+    width: 3rem;
+    max-height: 8rem;
+    margin-right: .7rem;
 }
 
 .post-title{
@@ -89,23 +107,9 @@ main{
     padding-left: 1.7rem;
 }
 
-.post-image{
-    float: left;
-    width: 8rem;
-    max-height: 8rem;
-    margin-right: 1rem;
-}
-
-.post-image-small{
-    float: left;
-    width: 2rem;
-    max-height: 8rem;
-    margin-right: .7rem;
-}
-
 .navbar{
     max-width: 45rem;
-   min-width: 375px;
+    min-width: 375px;
     margin: auto;
 }
 
@@ -139,7 +143,6 @@ main{
 
 .link-text{
     display: block;
-    color: var(--text-primary);
 }
 
 .nav-link svg{
@@ -153,6 +156,7 @@ main{
     border-width: 0px;
     border-bottom-width: 5px;
     border-style: solid;
+    color: #ab00c2;;
 }
 
 .fa-secondary{
@@ -169,11 +173,12 @@ main{
     text-align: center;
     background-color: white;
     box-shadow: 1.5px 2px rgba(0, 0, 0, 0.062), -3px 0 .4em rgba(0, 0, 0, 0.062);
+    z-index: 99999;
 }
 
 .name-banner > h1{
     margin: auto;
-    color: var(--text-secondary);
+    color: #ab00c2;
 }
 
 /* Small screens */
@@ -188,7 +193,6 @@ main{
     }
 
     #nav-active{
-        filter: grayscale(0%) opacity(1);
         border-top: #ab00c2;
         border-width: 0px;
         border-top-width: 3.5px;
@@ -206,15 +210,13 @@ main{
     }
 
     .post-image{
-        float: left;
         width: 6.7rem;
         max-height: 8rem;
         margin-right: .7rem;
     }
 
     .post-image-small{
-        float: left;
-        width: 2rem;
+        width: 2.8rem;
         max-height: 8rem;
         margin-right: .7rem;
     }
@@ -225,18 +227,13 @@ main{
 
     .name-banner{
         padding-top: .3rem;
-        position: fixed;
         bottom: auto;
         top: 0;
-        margin: auto;
-        width: 100%;
         height: 2.3rem;
     }
     
     .name-banner > h1{
         font-size: 1.7rem;
-        margin: auto;
-        color: var(--text-secondary);
     }
 
   }
