--- a/style.css
+++ b/style.css
@@ -80,6 +80,16 @@ main{
     margin-right: 1rem;
 }
 
+.profile-picture{
+    float: right;
+    width: 6rem;
+    max-height: 8rem;
+    margin-right: 1rem;
+    border-radius: 50%;
+    border: solid;
+    border-color: #777;
+}
+
 .post-image-small{
     float: right;
     width: 3rem;
