--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ main{
     width: 6rem;
     max-height: 8rem;
     margin-right: 1rem;
+    margin-bottom: 1rem;
     border-radius: 50%;
     border: solid;
     border-color: #777;
