--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ body::-webkit-scrollbar-thumb{
 main{
     margin: auto;
     max-width: 800px;
-    min-width: 375px;
     margin-top: 5rem;
     padding: 0rem;
     padding: 0rem;
@@ -226,6 +225,13 @@ a{
 
     .topbar-container{
         padding-top: 0rem;
+    }
+
+    .post{
+        position: relative;
+        width: 87%;
+        margin: 1rem;
+        padding: 1rem;
     }
 
     .post-image{
